# ctest

./: .clang-format  CMakeLists.txt  Makefile  README.md  build.cfg  ctest.mk
include/: test.h
src/: test.c
test/: main.c
